--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -1,46 +1,4 @@
-.app {
-  text-align: center;
-}
-li{
-  color: #276955;
-  font-family: Arial, Helvetica, sans-serif;
-  list-style-type: none;
-  margin: 0px 40px;
-}
-
-form{
-  margin-top: 20px;
-}
-
-label{
-  font-family: Arial, Helvetica, sans-serif;
-  color: #276955;
-  margin-left: 20px
-}
-
-.border{
-  color: #276955;
-}
-.nav{
-  display: flex;
-  justify-content: center;
-  text-align: center;
-}
-.logo{
-  width: 180px;
-  height: 150px;
-}
-
-.formbtn{
-  margin-top: 20px;
-  background-color: transparent;
-  border: 1px solid  #276955;
-  border-radius: 5px;
-  width: 80px;
-  height: 30px;
-}
-
-.formbtn:hover{
-  color: beige;
-  background-color: #276955;
-}
+@import "./desktopview.css";
+@import "./shared.css";
+@import "./phoneview.css";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
