--- a/client/src/styles/desktopview.css
+++ b/client/src/styles/desktopview.css
@@ -1,14 +1,13 @@
 @media (min-width: 600px) {
-.items {
-  padding: 35px 0px ;
+.products{
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+.items{
+  margin-top: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
-  width: 1100px;
-  background-color: rgb(242, 242, 242);
-  overflow:hidden;
-  margin: auto
 }
 .card__img{
   border-radius: 2px;
