--- a/client/src/styles/shared.css
+++ b/client/src/styles/shared.css
@@ -25,6 +25,25 @@ label{
     margin-left: 20px
 }
 
+a{
+  text-decoration: none;
+}
+
+input{
+  border-radius: 5px;
+  background-color: beige;
+  border:1px solid #276955;
+  text-align: center;
+}
+
+.search{
+  width: 70%;
+  height: 30px;
+  border-radius: 30px;
+  background-color: beige;
+  border:2px solid #276955;
+  text-align: center;
+}
 .upload-button{
   color: transparent;
 }
@@ -42,6 +61,7 @@ label{
     width: 180px;
     height: 150px;
 }
+
   
 .form__btn{
     margin-top: 20px;
@@ -57,6 +77,10 @@ label{
     background-color: #276955;
 }
 
+.form__img{
+  width:400px;
+  height: 300px;
+}
 
 .items__card{
   width: 320px; 
@@ -78,3 +102,18 @@ label{
   justify-content: space-around;
   padding-bottom: 15px;
 }
+.card__midcontent{
+  text-align: left;
+  margin-right: 10px;
+}
+.about{
+  margin: 30px 30px;
+  background-color: #bebebe42;
+  padding: 20px;
+  border-radius: 30px;
+}
+
+.about__text{
+  font-size: 25px;
+}
+
